# agents

./: .gitignore  AGENTS.md  OVERVIEW.md  README.md  USAGE.md  VISION.md  agent_post_session_update.sh  pyproject.toml
.agents/: index.pretty.json  priorities.json
.agents/modules/agents_core/: tasks.json
.agents/modules/resources/: tasks.json
.agents/modules/schemas/: tasks.json
.agents/modules/templates/: tasks.json
.agents/schemas/: tasks.schema.json
scripts/: agent_scan.py
src/agents_core/: cli.py  install.py  scan.py  update.py
src/agents_core/resources/: AGENTS.md
src/agents_core/resources/schemas/: common.schema.json  index.schema.json  priorities.schema.json
src/agents_core/resources/templates/: OVERVIEW.md  VISION.md  agent_workflow.md  module_tasks.json  task_entry.json
tests/: test_install.py  test_scan.py  test_update.py
